force-app/main/default/objects/InterestCategory__c/InterestCategory__c.object-meta.xml
<CustomObject>
    <description>An interest category on the MinnPost E-mail Newsletters list (updated from Mailchimp automatically).</description>
    <label>Interest Category</label>
    <nameField>
        <label>Interest Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>