force-app/main/default/objects/InterestCategory__c/fields/CategoryID__c.field-meta.xml
<CustomField>
    <fullName>CategoryID__c</fullName>
    <description>The Mailchimp ID for the category.</description>
    <externalId>true</externalId>
    <label>Category ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>