force-app/main/default/objects/InterestCategory__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>The order that the categories are displayed in the list. Lower numbers display first.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>