force-app/main/default/objects/InterestCategory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines how this category’s interests appear on signup forms.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>checkboxes</fullName>
            </value>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>